Fixed drawer wrapping and clock format; added toolbar

--- a/src/com/nkris/scheduling_app/main/stylesheets/application.css
+++ b/src/com/nkris/scheduling_app/main/stylesheets/application.css
@@ -1,10 +1,8 @@
 #clock {
-    -fx-font-size: 60px;
+    -fx-font-size: 14;
     -fx-font-family: "Lucida Console";
-    -fx-fill: white;
-    -fx-stroke: black;
+    -fx-text-fill: white;
     -fx-stroke-width: 1;
-    -LABEL-PADDING-TOP: 200px;
 }
 
 #calendarDay {
@@ -18,7 +16,8 @@
 
 #dateLabel {
 	-fx-font-size: 16;
-	-fx-text-fill:  #6CB7B0;
-	-fx-font-family: "Arial Black";
+	-fx-text-fill:   #1512AD;
+	-fx-font-family: "SansSerif";
+	-fx-font-weight: bold;
 	
 }
